fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 60%;
+  top: 65%;
   left: 45.5%;
   
 }
@@ -276,7 +276,7 @@ h3 {
   color: #240754;
   position: absolute;
   text-align: center;
-  top: 65%;
+  top: 70%;
   left: 47%;
   
 }
@@ -288,7 +288,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 85%;
+  top: 95%;
   left: 46%;
   
 }
@@ -300,7 +300,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 90%;
+  top: 100%;
   left: 44.5%;
   
 }
@@ -312,7 +312,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 55%;
+  top: 60%;
   left: 74.5%;
   
 }
@@ -324,7 +324,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 60%;
+  top: 65%;
   left: 78.2%;
   
 }
@@ -336,7 +336,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 53%;
+  top: 60%;
   left: 12%;
   
 }
@@ -348,7 +348,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 58%;
+  top: 65%;
   left: 12%;
   
 }
@@ -359,7 +359,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 63%;
+  top: 70%;
   left: 10%;
   
 }
@@ -371,7 +371,7 @@ h3 {
   font-size: 28px;
   color: #240754;
   position: absolute;
-  top: 63%;
+  top: 70%;
   left: 18%;
   
 }
